tests/miniJava/neg/001090_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new class int [ 0 ] ; } }
